--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="col-md-6">
                             <div id="circular" class="text-center ">
                                 <!-- <img src="images/purple_evan.jpg" alt="Evan Morgan" id="profile_image"> -->
-                            <img src="images/BMI-MPH_2.png" alt="Evan Morgan" id="profile_image">
+                            <img src="images/BMI-MPH_2.jpg" alt="Evan Morgan" id="profile_image">
                             <p>
                             <!-- <a href="https://github.com/dcolinmorgan"><span class="_blank"><i class="fa fa-github-square fa-3x"></i></span></a> -->
                             <a href="https://linkedin.com/in/evmorgan"><span class="_blank"><i class="fa fa-linkedin-square fa-3x"></i></span></a>
