--- a/index.html
+++ b/index.html
@@ -152,10 +152,17 @@
                   <div class="row">
                     <div class="col-md-2 education_class "><h4>Education</h4></div>
                     <div class="col-md-7 ">
+			    
+                      <div class="job">
+                        <div class="position_title">The Ohio State University</div>
+                        <div class="company_title">M.Sc. Physcology</div>
+                        <div class="job_period">August 2019 - May 2021</div>
+                        <div class="job_details">Thesis on Temporal Clustering of Patient EHF Use.</p> </div></div>
 
+<div class="job">
                       <div class="job">
                         <div class="position_title">College of the Holy Cross</div>
-                        <div class="company_title">B.Sc. Physcology</div>
+                        <div class="company_title">B.A. Physcology</div>
                         <div class="job_period">August 2009 - May 2013</div>
                         <div class="job_details">I studied psycholgy with a pre-med focus.<p> Dean's List 2010, 2011, 2013.</p> </div></div>
 
