--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			    
                       <div class="job">
                         <div class="position_title">The Ohio State University</div>
-                        <div class="company_title">M.Sc. Physcology</div>
+                        <div class="company_title">M.Sc. Biomedical Informatics</div>
                         <div class="job_period">August 2019 - May 2021</div>
                         <div class="job_details">Thesis on Temporal Clustering of Patient EHF Use.</p> </div></div>
 
