--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <!-- <img src="images/purple_evan.jpg" alt="Evan Morgan" id="profile_image"> -->
                             <img src="images/BMI-MPH_2.jpg" alt="Evan Morgan" id="profile_image">
                             <p>
-                            <!-- <a href="https://github.com/dcolinmorgan"><span class="_blank"><i class="fa fa-github-square fa-3x"></i></span></a> -->
+                            <a href="https://github.com/emartinmorgan"><span class="_blank"><i class="fa fa-github-square fa-3x"></i></span></a>
                             <a href="https://linkedin.com/in/evmorgan"><span class="_blank"><i class="fa fa-linkedin-square fa-3x"></i></span></a>
 
                             <a href="https://twitter.com/emartmorg"><span class="_blank"><i class="fa fa-twitter-square fa-3x"></i></span></a>
