--- a/index.html
+++ b/index.html
@@ -80,14 +80,17 @@
 
                             <a href="https://twitter.com/emartmorg"><span class="_blank"><i class="fa fa-twitter-square fa-3x"></i></span></a>
 
-                            <a href="https://orcid.org/0000-0001-8326-6178"><span class="_blank"><i class="ai ai-orcid-square ai-3x"></i></span></a>
                             <a href="https://scholar.google.com/citations?hl=en&user=Rm-byDcAAAAJ"><span class="_blank"><i class="ai ai-google-scholar-square ai-3x"></i></span></a>
 
                             </div>
                         </div>
 
                         <div class="col-md-6 short_description space2 ">
-                            <p> Hi, I'm Evan.</p><p> I work at OSUCCC in a breast cancer lab with the ambitions of helping individuals and populations with preventative, data-centric approaches.</p> <p>I am an experienced researcher with a demonstrated history of working in the hospital & health care industry. Skilled in R, SQL, REDCap, and clinical research. I am also working toward a Master of Science - MS focused in Biomedical Informatics from The Ohio State University College of Public Health.</p> <p>
+                            <p> Hi, I'm Evan.</p><p> I work at OSUCCC in a breast cancer lab with the ambitions of helping individuals and populations with preventative, data-centric approaches.</p> 
+				<p> I recently finished my Master of Science (M.Sc.) in Biomedical Informatics from The Ohio State University, and am now looking for opportunities in the data science and health industry.</p> 
+				<p> I am an experienced researcher with a demonstrated history of working in the hospital & health care industry.</p>
+				<p> Skilled in Python, SQL, R, REDCap, and clinical research.</p> 
+				<p>
                              </p>
                         </div>
 
@@ -138,9 +141,9 @@
 
                     <div class="col-md-3 ">
                       <div class="skill_box">
-                        <p class="skills">Specialties</p>Data Analysis<br>EHR<br>Data Management<br><p></p>
-                          <p class="skills">Skills</p>Clinical Research<br>Manuscript Prep<br>Psychology<br><p></p>
-                          <p class="skills">Languages</p>Stata<br>R<br>SQL<br>REDCap<br><p></p>
+                        <p class="skills">Specialties</p>Data Analysis<br>Predictive Modeling<br>EHR querying<br><p></p>
+                          <p class="skills">Skills</p>Clinical Research<br>Statistics<br>Psychology<br><p></p>
+                          <p class="skills">Languages</p>Python (SciPy,Pandas,etc)<br>R<br>SQL<br>REDCap<br><p></p>
                           <p class="skills"><a href="https://github.com/emartinmorgan/profile/blob/master/em_resume2021.pdf" target="_blank"><span class="color_3">PRINT RESUME</span></a></p>
                     </div>
                     </div>
@@ -249,6 +252,8 @@
               <div class="row whatsnewPageText">
                   <h2>What's New?</h2>
                   <ul>
+		    <li class="whatsNewli">In May 2021, I defended my M.Sc. thesis under the mentorship of <a href"hhttps://medicine.osu.edu/find-faculty/non-clinical/biomedical-informatics/naleef-fareed" target="_blank">Naleef Fareed</a> at OSU BMI.
+
                     <li class="whatsNewli">In May 2020, I began work in <a href"https://cancer.osu.edu/for-cancer-researchers/research/research-labs/ramaswamy-lab" target="_blank">Ramaswamy  Lab</a> at OSUCCC.
 
                     <li class="whatsNewli">In September 2017, I began work in <a href"https://u.osu.edu/stoverlab/" target="_blank">Stover Lab</a> at OSUCCC.
